--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../JS-Basico3/style3.css">
+    <link rel="stylesheet" href="style3.css">
     <title>Document</title>
 </head>
 
@@ -80,7 +80,7 @@
             <button class="btnLanzarMoneda">Lanzar Moneda</button>
             <button class="btnReiniciar" style="display:none;">Reiniciar</button>
         </div>
-        <div class="opciones">
+        <div class="opciones my-3">
             <label>
                 <input type="radio" name="eleccion" value="cara"> Cara
             </label>
@@ -94,7 +94,7 @@
 
 
 
-    <script src="../JS-Basico3/js-3.js"></script>
+    <script src="js-3.js"></script>
 </body>
 
 </html>
