--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <p class="textoRapido"></p>
         <div class="d-flex flex-row gap-5 ">
-            <img class="img-fluid imgMoneda" src="../JS-Basico3/cara-euro.png" alt="">
+            <img class="img-fluid imgMoneda" src="cara-euro.png" alt="">
         </div>
 
         <div class="text-center btnCoin d-flex flex-column">
